<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_send_mess"
    android:contentDescription="@string/discription">
      
    <EditText android:id="@+id/message_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/message_hint"/>
    
    <RadioGroup android:layout_width="wrap_content"
        android:layout_below="@id/message_text"
        android:id="@+id/message_type"
    	android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_marginRight="10dp">
	    <RadioButton android:id="@+id/message_radio_yesno"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_radio_yesno"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_radio_info"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_radio_info"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_radio_message"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_radio_message"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_radio_attention"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_radio_attention"
	        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
	
    <RadioGroup android:layout_width="wrap_content"
        android:layout_toRightOf="@id/message_type"
        android:layout_below="@id/message_text"
    	android:layout_height="wrap_content"
    	android:orientation="vertical">
	    <RadioButton android:id="@+id/message_length_5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_length_5"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_length_10"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_length_10"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_length_20"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_length_20"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_length_40"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_length_40"
	        android:onClick="onRadioButtonClicked"/>
	    <RadioButton android:id="@+id/message_length_noLimit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/message_length_noLimit"
	        android:onClick="onRadioButtonClicked"/>
	</RadioGroup>
</RelativeLayout>
