<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".Activity_extra"
    android:contentDescription="@string/discription">

    <TextView android:id="@+id/rec_info"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
	    android:clickable="true"
	    android:onClick="intent"
        android:hint="@string/rec_info"
        android:textSize="@dimen/font_size_extra" 
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:background="@drawable/border_bottom"/>
    
    <TextView android:id="@+id/grab_screen"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
	    android:clickable="true"
	    android:onClick="intent"
        android:hint="@string/grab_screen" 
        android:textSize="@dimen/font_size_extra"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:background="@drawable/border_bottom"/>
    
    <TextView android:id="@+id/search_epg"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
	    android:clickable="true"
	    android:onClick="intent"
        android:hint="@string/search_epg" 
        android:textSize="@dimen/font_size_extra"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:background="@drawable/border_bottom"/>
    
    <TextView android:id="@+id/send_mess"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
	    android:layout_marginBottom="1dp"
	    android:clickable="true"
	    android:onClick="intent"
        android:hint="@string/send_mess" 
        android:textSize="@dimen/font_size_extra"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:background="@drawable/border_bottom"/>
    
    <!-- <TextView android:id="@+id/signal_meter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center_vertical"
	    android:clickable="true"
	    android:onClick="intent"
        android:hint="@string/signal_meter" 
        android:textSize="@dimen/font_size_extra"
        android:textColorHint="@color/white"
        android:layout_marginLeft="20dp"
	    android:layout_marginRight="20dp"
	    android:paddingLeft="5dp"/> -->
    

</LinearLayout>
